# heikal

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: ai.rs  app.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  shaping.rs  sync.rs  ui.rs
tests/: integration_tests.rs
