[package]
name = "heikal"
version = "0.1.0"
edition = "2021"
description = "A terminal RSS reader with bidirectional (Arabic) text shaping"
homepage = "https://github.com/BooDy/heikal"
repository = "https://github.com/BooDy/heikal"
readme = "README.md"
license = "MIT"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
tokio = { version = "1.37.0", features = ["full"] }
ratatui = "0.26.1"
crossterm = "0.27.0"
reqwest = { version = "0.12.4", features = ["json"] }
feed-rs = "1.5.1"
unicode-bidi = "0.3.15"
rustybuzz = "0.12.1"
font-kit = "0.14.1"
thiserror = "1.0.61"
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
html2text = "0.12"

[dev-dependencies]
tempfile = "3.10.1"

[package.metadata.deb]
maintainer = "Abdelrahman Ghareeb <abdelrahman@slashproc.net>"
copyright = "2026, Abdelrahman Ghareeb"
license-file = ["LICENSE"]
extended-description = "A terminal RSS reader with bidirectional (Arabic) text shaping."
section = "utility"
priority = "optional"
assets = [
    ["target/release/heikal", "usr/bin/heikal", "755"],
]

[package.metadata.generate-rpm]
summary = "A terminal RSS reader with bidirectional (Arabic) text shaping"
license = "MIT"
assets = [
    { source = "target/release/heikal", dest = "/usr/bin/heikal", mode = "0755" }
]

